<resources>
    <string name="app_name">私家车</string>
    <string name="title_activity_my_car">Activity_myCar</string>
    <string name="num_and_letter">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="title_activity_safe">SafeActivity</string>
    <string name="title_activity_safe_content">SafeContentActivity</string>
    <string name="login_failure">登录失败</string>
    <string name="accout_and_passwod_can_not_null">账号或密码不能为空</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号码</string>
    <string name="identifying_code">验证码</string>
    <string name="send">发送</string>
    <string name="reset_password">重置密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">验证新密码</string>
    <string name="not_null">内容不能为空</string>
    <string name="password_length_less_than_six">密码长度不能小于六个字符</string>
    <string name="user_info_msg">帐号即车主手机号码，该帐号登录状态下记录的车辆默认与此手机号码绑定</string>
    <string name="title">标题</string>
    <string name="account">账号</string>
    <string name="car_insurance">车辆保险</string>
    <string name="app_version">app版本号</string>
    <string name="team_info">介绍</string>
    <string name="tean_info_content">本软件由湖南工业大学hutcwp团队开发制作.是一款为私家车及车主提供各种便捷可靠服务的工具。此版本仅用于比赛使用，最终解释权归hutcwp团队所有</string>
    <string name="team">团队</string>
    <string name="ui_designer">UI交互设计 ：刘春杰</string>
    <string name="android_developers">Android及后台开发 ：蔡文鹏，曾智祺，伍安芸</string>
    <string name="contact">联系</string>
    <string name="mail_to">mail to</string>
    <string name="email_address">hutcwp@foxmail.com</string>
    <string name="about">关于</string>
    <string name="inRecord">在记录之中</string>
    <string name="myCar">我的私家车</string>
    <string name="query_failure">查询失败</string>
    <string name="failure">失败：</string>
    <string name="feedback_again">再次留言</string>
    <string name="ok_return">好的，返回</string>
    <string name="feedbak_success_tip">我们会在一个工作日内联系你</string>
    <string name="feedbak_success">留言成功</string>
    <string name="feedback">反馈</string>
    <string name="Hunan_university_of_technology">湖南工业大学</string>
    <string name="gas_price">今日油价</string>
    <string name="illegal_recod">违章记录</string>
    <string name="car_check">车辆体检</string>
    <string name="notice_move_car">通知移车</string>
    <string name="all_powerful_map">全能地图</string>
    <string name="map_tip">加油站 / 修车点 / 停车场 / 路径导航</string>
    <string name="ok">确定</string>
    <string name="go_to_here">出发去该地</string>
    <string name="cancle">取消</string>
    <string name="update_time">刷新时间</string>
    <string name="back">返回</string>
    <string name="reload">重新加载</string>
    <string name="load_failure">获取服务数据失败 可能网络出错或服务器正在维护 请稍后再试~</string>
    <string name="m">通知移车</string>
</resources>
