<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/z_activity_feedback_success"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hut.cwp.mcar.activitys.other.FeedbackSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y128"
        android:background="#76b0f4">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/y40"
            android:background="#75aff4">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="@dimen/x22"
                android:layout_height="@dimen/y40"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x30"
                android:background="@drawable/way_rigister_btn_back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/feedback"
                android:textColor="#ffffff"
                android:textSize="@dimen/x40" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y80"
            android:text="@string/feedbak_success"
            android:textColor="#404040"
            android:textSize="@dimen/x36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y80"
            android:text="@string/feedbak_success_tip"
            android:textColor="#404040"
            android:textSize="@dimen/x18" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="@dimen/x400"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/y80"
            android:background="@drawable/cwp_feedback_result_half_btn"
            android:text="@string/ok_return"
            android:textColor="#ffffff"
            android:textSize="@dimen/x24" />


        <Button
            android:id="@+id/btn_feedback_again"
            android:layout_width="@dimen/x400"
            android:layout_height="@dimen/y100"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/y80"
            android:layout_marginTop="@dimen/y40"
            android:background="@drawable/cwp_feedback_result_half_btn"
            android:text="@string/feedback_again"
            android:textColor="#ffffff"
            android:textSize="@dimen/x24" />

    </LinearLayout>

</LinearLayout>
