<?xml version="1.0" encoding="utf-8"?>
<layout
    >
    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/way_bcg_sign_in"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y100">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="@dimen/x16"
                android:layout_height="@dimen/y30"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/x80"
                android:background="@drawable/way_login_btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="@dimen/x48" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x120"
            android:layout_marginRight="@dimen/x120"
            android:layout_marginTop="@dimen/y80"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="#ffffff"
                android:textSize="@dimen/x30" />

            <EditText
                android:id="@+id/edt_tel_number"
                android:layout_width="@dimen/x400"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x40"
                android:layout_marginTop="@dimen/y20"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identifying_code"
                android:textColor="#ffffff"
                android:textSize="@dimen/x30" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_send"
                    android:layout_width="@dimen/x150"
                    android:layout_height="@dimen/y60"
                    android:layout_marginLeft="@dimen/x40"
                    android:background="@drawable/way_xml_btn_cricle_half"
                    android:text="@string/send"
                    android:textColor="#6bd866"
                    android:textSize="@dimen/x24" />

                <EditText
                    android:id="@+id/edt_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x30" />


            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_register"
            android:layout_width="@dimen/x140"
            android:layout_height="@dimen/y140"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/x40"
            android:background="@drawable/way_xml_btn_circle_full"
            android:src="@drawable/way_rigister_btn_go" />


    </LinearLayout>

</layout>

